Fixed z-index on pixel select menu

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,7 +102,7 @@ h1 {
 
 .drawing_pointer {
 	position: absolute;
-	z-index: 9007199254740989; /* just behind the canvas */
+	z-index: 100000000000009; /* just behind the canvas */
 }
 
 #drawing_layers {
@@ -119,9 +119,9 @@ h1 {
 	left: 0px;
 }
 
-/* canvas that other users are drawing onto, or this user */
+/* canvas that the local user is drawing onto. Remote users draw onto seperate canvases */
 .drawing_canvas {
-	z-index: 9007199254740000;	
+	z-index: 100000000000009;
 	position: absolute;
 	top: 0px;
 	left: 0px;
@@ -297,7 +297,7 @@ h1 {
 	height: 45px;
 	cursor: pointer;
 	border-radius: 0px;
-	z-index: 9000;
+	z-index: 100000000000011;
 	float: left;
 	margin-bottom: 5px;
 }
@@ -312,7 +312,7 @@ h1 {
 	border-radius: 3px;
 	box-shadow: 0px 0px 6px 3px rgba(255,255,255,1);
 	background-color: #000;
-	z-index: 9007199254740990;
+	z-index: 100000000000008;
 }
 
 .pointer_label {
@@ -332,7 +332,7 @@ h1 {
     background-color: rgba(0, 0, 0, 0.7);
 	white-space: nowrap;
 	font-family: ubuntuBold;
-	z-index: 9007199254740990;
+	z-index: 100000000000008;
 }
 
 
